--- a/core/templates/core/link_list.html
+++ b/core/templates/core/link_list.html
@@ -27,7 +27,7 @@
                     <a href="{{ link.url }}" target="_blank" rel="noopener noreferrer"><img src="{{ link.image.url }}" class="autoresizeimg" alt="{{ link.name }} logo"></a>
                     </div>
                     <div class="col d-md-flex align-items-center">
-                        <p><strong></strong><a href="{{ link.url }}" target="_blank" rel="noopener noreferrer">{{ link.name }}</a><br>
+                        <p><strong></strong><a href="{{ link.url }}" target="_blank" rel="noopener noreferrer">{{ link.name }} [{{ link.lang }}]</a><br>
                         <small>{{ link.description }}</small></p>
                     </div>
                 </div>
