--- a/core/templates/core/tree_detail.html
+++ b/core/templates/core/tree_detail.html
@@ -31,7 +31,7 @@
         <div class="row mt-2 mb-2">
         {% for photo in photos %}
           <div class="col mt-2 mb-2">
-              <a href="{% url 'photo-detail' photo.pk %}"><img src="{{ photo.thumb.url }}" class="autoresizeimg"></a>
+              <a href="{% url 'photo-detail' photo.pk %}"><img src="{{ photo.thumb.url }}" class="autoresizeimg2"></a>
           </div>
         {% endfor%}
         </div>
