--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -28,6 +28,7 @@
 
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
+      {% if user.is_authenticated %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans 'Collection' %}</a>
           <div class="dropdown-menu">
@@ -56,32 +57,34 @@
             <a class="dropdown-item" href="{% url 'links' %}">{% trans "Links" %}</a>
           </div>
         </li>
+      {% endif %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}</a>
           <div class="dropdown-menu">
+          {% if user.is_authenticated %}
+            <a class="dropdown-item" href="{% url 'faq' %}">{% trans "FAQ/help" %}</a>
+          {% endif %}
           {% get_current_language as LANGUAGE_CODE %}
               {% if LANGUAGE_CODE == 'fr' %}
                 <a class="dropdown-item" href="/generalinfo/fr/">{% trans "General info" %}</a>
+                <a class="dropdown-item" href="/privacypolicy/fr/">{% trans "Privacy policy" %}</a>
+                <a class="dropdown-item" href="/legalpolicies/fr/">{% trans "Legal policies" %}</a>
               {% else %}
                 <a class="dropdown-item" href="/generalinfo/">{% trans "General info" %}</a>
+                <a class="dropdown-item" href="/privacypolicy/">{% trans "Privacy policy" %}</a>
+                <a class="dropdown-item" href="/legalpolicies/">{% trans "Legal policies" %}</a>
               {% endif %}
-            <a class="dropdown-item" href="{% url 'faq' %}">{% trans "FAQ/help" %}</a>
-              {% if LANGUAGE_CODE == 'fr' %}
-                  <a class="dropdown-item" href="/privacypolicy/fr/">{% trans "Privacy policy" %}</a>
-              {% else %}
-                  <a class="dropdown-item" href="/privacypolicy/">{% trans "Privacy policy" %}</a>
-              {% endif %}
-              {% if LANGUAGE_CODE == 'fr' %}
-                  <a class="dropdown-item" href="/legalpolicies/fr/">{% trans "Legal policies" %}</a>
-              {% else %}
-                  <a class="dropdown-item" href="/legalpolicies/">{% trans "Legal policies" %}</a>
-              {% endif %}
-            <div class="dropdown-divider"></div>
+          <div class="dropdown-divider"></div>
+          {% if user.is_authenticatd %}
             <a class="dropdown-item" href="#">{% trans "Contact the author" %}</a>
+          {% else %}
+              <a class="dropdown-item" href="/">{% trans "Home" %}</a>
+          {% endif %}
           </div>
         </li>
       </ul>
-      <div >
+    {% if user.is_authenticated %}
+      <div>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
@@ -93,6 +96,7 @@
         </li>
       </ul>
     </div>
+    {% endif %}
     </div>
   </div>
 </nav>
