--- a/start/templates/socialaccount/login.html
+++ b/start/templates/socialaccount/login.html
@@ -1,19 +1,58 @@
-{% extends "socialaccount/base.html" %}
+{% extends "start/base.html" %}
 {% load i18n %}
-
 {% block content %}
+<div class="container mt-3">
 {% if process == "connect" %}
 <h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
-
 <p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
 {% else %}
 <h1>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h1>
-
 <p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from {{ provider }}.{% endblocktrans %}</p>
 {% endif %}
+{% get_current_language as LANGUAGE_CODE %}
+<fieldset>
+  <legend class="mt-4">{% trans 'Acceptance of Terms of Use' %}</legend>
+  <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="c1">
+        {% if LANGUAGE_CODE == 'fr' %}
+    <label class="form-check-label" for="flexSwitchCheckDefault"><a href="/privacypolicy/fr/">{% trans "Privacy policy" %}</a>
+        {% else %}
+    <label class="form-check-label" for="flexSwitchCheckDefault"><a href="/privacypolicy/">{% trans "Privacy policy" %}</a>
+        {% endif %}
+            </label>
+  </div>
+  <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="c2">
+      {% if LANGUAGE_CODE == 'fr' %}
+        <label class="form-check-label" for="flexSwitchCheckChecked"><a href="/legalpolicies/fr/">{% trans "Legal policies" %}</a></label>
+      {% else %}
+          <label class="form-check-label" for="flexSwitchCheckChecked"><a href="/legalpolicies/">{% trans "Legal policies" %}</a></label>
+      {% endif %}
+  </div>
+</fieldset>
+<div id="cont" class="mt-3 d-none">
+    <form method="post">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-primary">{% trans "Continue" %}</button>
+    </form>
+</div>
+</div>
+<script>
+// show and hide weather values
+    let check1 = document.getElementById('c1');
+    let check2 = document.getElementById('c2');
 
-<form method="post">
-  {% csrf_token %}
-  <button type="submit" class="btn btn-primary">{% trans "Continue" %}</button>
-</form>
+	function showhide(ch1,ch2) {
+		let content = document.querySelector('#cont');
+        if( !content ) return;
+		if(ch1.checked==true && ch2.checked==true){
+			content.classList.remove( 'd-none' );
+		} else {
+			content.classList.add( 'd-none' );
+		}
+	}
+	showhide(check1, check2);
+	check1.addEventListener('click', function(){showhide(check1,check2)}, true);
+    check2.addEventListener('click', function(){showhide(check1,check2)}, true);
+</script>
 {% endblock %}
