--- a/start/templates/socialaccount/login.html
+++ b/start/templates/socialaccount/login.html
@@ -12,22 +12,16 @@
 {% get_current_language as LANGUAGE_CODE %}
 <fieldset>
   <legend class="mt-4">{% trans 'Acceptance of Terms of Use' %}</legend>
-  <div class="form-check form-switch">
+  <div class="form-check">
     <input class="form-check-input" type="checkbox" id="c1">
         {% if LANGUAGE_CODE == 'fr' %}
-    <label class="form-check-label" for="flexSwitchCheckDefault"><a href="/privacypolicy/fr/">{% trans "Privacy policy" %}</a>
+    <label class="form-check-label" for="flexCheckDefault">J'ai lu et j'accepte la <a href="/privacypolicy/fr/">
+            {% trans "Privacy policy" %}</a> et les <a href="/legalpolicies/fr/">{% trans "Legal policies" %}</a>.
         {% else %}
-    <label class="form-check-label" for="flexSwitchCheckDefault"><a href="/privacypolicy/">{% trans "Privacy policy" %}</a>
+    <label class="form-check-label" for="flexCheckDefault">I have read and accept the <a href="/privacypolicy/">
+            {% trans "Privacy policy" %}</a> and the <a href="/legalpolicies/">{% trans "Legal policies" %}</a>.
         {% endif %}
             </label>
-  </div>
-  <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="c2">
-      {% if LANGUAGE_CODE == 'fr' %}
-        <label class="form-check-label" for="flexSwitchCheckChecked"><a href="/legalpolicies/fr/">{% trans "Legal policies" %}</a></label>
-      {% else %}
-          <label class="form-check-label" for="flexSwitchCheckChecked"><a href="/legalpolicies/">{% trans "Legal policies" %}</a></label>
-      {% endif %}
   </div>
 </fieldset>
 <div id="cont" class="mt-3 d-none">
@@ -40,19 +34,18 @@
 <script>
 // show and hide weather values
     let check1 = document.getElementById('c1');
-    let check2 = document.getElementById('c2');
 
-	function showhide(ch1,ch2) {
+
+	function showhide(ch1) {
 		let content = document.querySelector('#cont');
         if( !content ) return;
-		if(ch1.checked==true && ch2.checked==true){
+		if(ch1.checked==true){
 			content.classList.remove( 'd-none' );
 		} else {
 			content.classList.add( 'd-none' );
 		}
 	}
-	showhide(check1, check2);
-	check1.addEventListener('click', function(){showhide(check1,check2)}, true);
-    check2.addEventListener('click', function(){showhide(check1,check2)}, true);
+	showhide(check1);
+	check1.addEventListener('click', function(){showhide(check1)}, true);
 </script>
 {% endblock %}
