--- a/start/templates/start/home.html
+++ b/start/templates/start/home.html
@@ -47,11 +47,9 @@
           <a class="list-group-item list-group-item-action" href="/legalpolicies/">{% trans "Legal policies" %}</a>
       {% endif %}
       </div>
-    <div class="row justify-content-center">
-    <div class="col-md-4 ml-auto mr-auto">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/tQB-hr1wVkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    </div>
+    <div class="text-center my-5 ratio ratio-16x9">
+        <iframe src="https://www.youtube.com/embed/tQB-hr1wVkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     <div class="card text-white border-info mb-3">
       <div class="card-header">{% trans 'Features' %}</div>
       <div class="card-body">
