--- a/start/static/css/style.css
+++ b/start/static/css/style.css
@@ -63,6 +63,14 @@
     max-width: 100%;
     height: auto;
 }
+
+.fill-div {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
+
 #profile_map { height: 400px; }
 #public_profile_map { height: 200px;}
 #members_map { height: 600px; }
