--- a/core/templates/core/tree_detail.html
+++ b/core/templates/core/tree_detail.html
@@ -22,6 +22,7 @@
             {% if request.user == tree.ownerfk %}
               <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button">{% trans 'Edit' %}</a>
               <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm mb-2" role="button">{% trans 'Delete' %}</a>
+              <a href="{% url 'instant-task' tree.id %}" class="btn btn-outline-success btn-sm mb-2" role="button" >&#9201;</a>
             {% endif %}
           </div>
           <div class="col">
