--- a/core/templates/core/base-calendar.html
+++ b/core/templates/core/base-calendar.html
@@ -4,23 +4,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="{% static 'manifest/manifest.json' %}">
 
-    <meta name="apple-mobile-web-app-title" content="Kawai Tree">
-    <meta name="application-name" content="Kawai Tree">
-    <meta name="msapplication-TileColor" content="#490714">
-    <meta name="msapplication-config" content="/static/img/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <title>Kawaïtree</title>
+    <title>Kawaitree</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style-calendar.css' %}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'img/site.webmanifest' %}">
-    <link rel="mask-icon" href="{% static 'img/safari-pinned-tab.svg' %}" color="#490714">
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
