--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,22 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="{% static 'manifest/manifest.json' %}">
 
-    <meta name="apple-mobile-web-app-title" content="Kawai Tree">
-    <meta name="application-name" content="Kawai Tree">
-    <meta name="msapplication-TileColor" content="#490714">
-    <meta name="msapplication-config" content="/static/img/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <title>Kawaïtree</title>
+    <title>Kawaitree</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'img/site.webmanifest' %}">
-    <link rel="mask-icon" href="{% static 'img/safari-pinned-tab.svg' %}" color="#490714">
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
