--- a/core/templates/core/base-calendar.html
+++ b/core/templates/core/base-calendar.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/style-calendar.css' %}">
 
+    <link rel="shortcut icon" href="{% static 'manifest/icon/favicon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'manifest/icon/apple-icon-180x180.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'manifest/icon/favicon-16x16.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'manifest/icon/favicon-32x32.png' %}">
+
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
