--- a/start/templates/account/base.html
+++ b/start/templates/account/base.html
@@ -10,6 +10,11 @@
     <title>Kawaitree</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <link rel="shortcut icon" href="{% static 'manifest/icon/favicon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'manifest/icon/apple-icon-180x180.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'manifest/icon/favicon-16x16.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'manifest/icon/favicon-32x32.png' %}">
 </head>
 <body>
 <div class="container-fluid noir no-padl">
