--- a/start/templates/start/base.html
+++ b/start/templates/start/base.html
@@ -11,7 +11,12 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    </head>
+    <link rel="shortcut icon" href="{% static 'manifest/icon/favicon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'manifest/icon/apple-icon-180x180.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'manifest/icon/favicon-16x16.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'manifest/icon/favicon-32x32.png' %}">
+
+</head>
 <body>
 {% get_current_language as LANGUAGE_CODE %}
 <!-- Current language: {{ LANGUAGE_CODE }} -->
