--- a/start/templates/start/home.html
+++ b/start/templates/start/home.html
@@ -4,7 +4,7 @@
 {% load socialaccount %}
 <div class="container mt-3">
   {% if user.is_authenticated %}
-    <p><img class="rounded-circle" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" /></p>
+    <p><img class="rounded-circle" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="avatar"/></p>
     <p>{% trans "Welcome, You are logged in as " %}{{ user.username }}</p>
     <p>{% trans "Your email address is " %}{{ user.email }}</p>
     <div class="googlebt1">
