--- a/core/templates/core/base-leaflet.html
+++ b/core/templates/core/base-leaflet.html
@@ -139,5 +139,6 @@
 <div class="fluid border-top border-primary">
     <p class="text-center font-weight-light small">Kawaï tree web application V 1.0 - 2022</p>
 </div>
+<script src="{% static 'js/sw-register.js' %}"></script>
 </body>
 </html>
