--- a/start/templates/start/offline.html
+++ b/start/templates/start/offline.html
@@ -1,7 +1,8 @@
 {% extends "start/base.html" %}
 {% load i18n %}
-{% block content %}
+{% load static %}
 {% load socialaccount %}
+{% block content %}
 <div class="container mt-3">
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
