--- a/start/templates/start/offline.html
+++ b/start/templates/start/offline.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <h4 class="card-title">{% trans "OFFLINE" %}</h4>
             <p class="card-text">{% trans "Sorry, it seems that you are offline. Please connect to the Internet and reload the page" %}</p>
-            <a href="{% static 'core-tdb' %}" class="btn-info">{% trans 'Reload' %}</a>
+            <a href="{% static 'core-tdb' %}" class="btn btn-info btn-sm mt-1" role="button">{% trans 'Reload' %}</a>
 
           </div>
         </div>
