--- a/core/templates/core/photo_form.html
+++ b/core/templates/core/photo_form.html
@@ -46,8 +46,8 @@
       </div>
     </fieldset>
     <div class="form-group">
-      <button class="btn btn-outline-success" type="submit">{% trans 'Ok' %}</button>
-      <a href="{% url 'core-tdb' %}" class="btn btn-outline-info">{% trans 'Cancel' %}</a>
+        <button class="btn btn-outline-success btn-sm" type="submit"><i class="bi bi-check display-6"></i></button>
+        <button class="btn btn-outline-info btn-sm" onclick="history.back()"><i class="bi bi-x display-6"></i></button>
     </div>
   </form>
 </div>
