--- a/core/templates/core/tree_detail.html
+++ b/core/templates/core/tree_detail.html
@@ -10,9 +10,15 @@
         <div class="row">
           <div class="col">
             <h5 class="card-title">{% trans 'Species:' %} <i>{{ tree.speciesfk }}</i></h5>
-            <p class="card-text">{% trans 'Description:' %} <i>{{ tree.description }} </i><br>
-            <span class="font-italic"><small>{% trans 'Planting date:' %} {{ tree.bdate }} </small></span><br>
-            <small>{% trans 'Acquisition date:' %} {{ tree.adate }} </small><br>
+            {% if tree.description %}
+                <p class="card-text">{% trans 'Description:' %} <i>{{ tree.description }} </i><br>
+            {% endif %}
+            {% if tree.bdate %}
+                <span class="font-italic"><small>{% trans 'Planting date:' %} {{ tree.bdate }} </small></span><br>
+            {% endif %}
+            {% if tree.adate %}
+                <small>{% trans 'Acquisition date:' %} {{ tree.adate }} </small><br>
+            {% endif %}
             <small>{% trans 'Origin:' %} {{ tree.originfk }} </small><br>
             <small>{% trans 'Owner:' %} <a href="{% url 'public_profile' tree.ownerfk.id %}">{{ tree.ownerfk }}</a></small></p>
             {% if tree.url %}
@@ -20,9 +26,9 @@
             {% endif %}
             <br>
             {% if request.user == tree.ownerfk %}
-              <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button">{% trans 'Edit' %}</a>
-              <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm mb-2" role="button">{% trans 'Delete' %}</a>
-              <a href="{% url 'instant-task' tree.id %}" class="btn btn-outline-success btn-sm mb-2" role="button" >&#9201;</a>
+                <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button"><i class="bi bi-pencil display-6"></i></a>
+              <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm mb-2" role="button"><i class="bi bi-trash3 display-6"></i></a>
+                <a href="{% url 'instant-task' tree.id %}" class="btn btn-outline-success btn-sm mb-2" role="button" ><i class="bi bi-hourglass-split display-6"></i></a>
             {% endif %}
           </div>
           <div class="col">
@@ -39,8 +45,8 @@
         <div class="pagination">
             <span class="step-links">
             {% if page_obj.has_previous %}
-                <a href="?page=1" class="btn btn-sm btn-outline-info mb-4">&laquo; {% trans 'first' %}</a>
-                <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-sm btn-outline-info mb-4">{% trans 'previous' %}</a>
+                <a href="?page=1" class="btn btn-sm btn-outline-info mb-4"><i class="bi bi-skip-backward display-6"></i></a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-sm btn-outline-info mb-4"><i class="bi bi-caret-left display-6"></i></a>
             {% endif %}
             {% for num in page_obj.paginator.page_range %}
                 {% if page_obj.number == num %}
@@ -50,15 +56,15 @@
                 {% endif %}
             {% endfor %}
             {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}" class="btn btn-sm btn-outline-info mb-4">{% trans 'next' %}</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}" class="btn btn-sm btn-outline-info mb-4">{% trans 'last' %} &raquo;</a>
+                <a href="?page={{ page_obj.next_page_number }}" class="btn btn-sm btn-outline-info mb-4"><i class="bi bi-caret-right display-6"></i></a>
+                <a href="?page={{ page_obj.paginator.num_pages }}" class="btn btn-sm btn-outline-info mb-4"><i class="bi bi-skip-forward display-6"></i></a>
             {% endif %}
             </span>
         </div>
         {% if request.user == tree.ownerfk %}
         <div class="row mt-2 mb-2">
           <div class="col">
-              <a href="{% url 'photo-create' tree.id '0' %}" class="btn btn-outline-success btn-sm mt-1" role="button">{% trans 'Add picture' %}</a>
+              <a href="{% url 'photo-create' tree.id '0' %}" class="btn btn-outline-success btn-sm mt-1" role="button"><i class="bi bi-plus-circle display-6"></i> <i class="bi bi-camera display-6"></i></a>
           </div>
         </div>
         {% endif %}
@@ -83,19 +89,27 @@
                         {{ task.tasklistfk }}
                       </td>
                       <td>
+                      {% if task.plan_date != None %}
                         {{ task.plan_date }}
+                      {% else %}
+                          -
+                      {% endif %}
                       </td>
                       <td>
+                      {% if task.real_date != None %}
                         {{ task.real_date }}
+                      {% else %}
+                          -
+                      {% endif %}
                       </td>
                       <td>
-                        <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Detail' %}</a>
+                        <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-info display-6"></i></a>
                       </td>
                       <td class="d-none d-md-table-cell">
-                        <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                          <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-pencil display-6"></i></a>
                       </td>
                       <td class="d-none d-md-table-cell">
-                        <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                        <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" ><i class="bi bi-trash3 display-6"></i></a>
                       </td>
                     {% endif %}
                 </tr>
@@ -103,9 +117,9 @@
                 </tbody>
               </table>
             {% endif %}
-
-          <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add task' %}</a>
+          <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" ><i class="bi bi-plus-circle display-6"></i> <i class="bi bi-scissors display-6"></i></a><br>
           {% endif %}
+        <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
       </div>
     </div>
 </div>
