--- a/core/templates/core/faq_list.html
+++ b/core/templates/core/faq_list.html
@@ -45,5 +45,6 @@
   </div>
     {% endfor %}
 </div>
+<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
 </div>
 {% endblock content%}
