--- a/core/templates/core/photo_confirm_delete.html
+++ b/core/templates/core/photo_confirm_delete.html
@@ -10,8 +10,8 @@
       <h2>{% trans 'Are you sure you want to delete this picture?'%}"</h2>
     </fieldset>
     <div class="form-group">
-      <button class="btn btn-outline-danger" type="submit">{% trans 'Yes delete' %}</button>
-      <a class="btn btn-outline-secondary" href="{% url 'core-tdb' %}">{% trans 'Cancel' %}</a>
+        <button class="btn btn-outline-danger btn-sm mt-2" type="submit"><i class="bi bi-trash3 display-6"></i> {% trans 'Yes delete' %}</button>
+        <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
     </div>
   </form>
 </div>
