--- a/core/templates/core/tasks.html
+++ b/core/templates/core/tasks.html
@@ -24,11 +24,19 @@
         {% for task in tasks %}
             <tr>
               <td>
+              {% if task.plan_date != None %}
                 {{ task.plan_date }}
+              {% else %}
+                  -
+              {% endif %}
               </td>
               {% if action == 3 %}
                     <td>
+                     {% if task.real_date != None %}
                         {{ task.real_date }}
+                     {% else %}
+                         -
+                     {% endif %}
                     </td>
                   {% endif %}
               <td>
@@ -38,13 +46,13 @@
                 {{ task.tasklistfk }}
               </td>
               <td>
-                <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Detail' %}</a>
+                <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-info-circle display-6"></i></a>
               </td>
               <td class="d-none d-md-table-cell">
-                <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-pencil display-6"></i></a>
               </td>
               <td class="d-none d-md-table-cell">
-                <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" ><i class="bi bi-trash3 display-6"></i></a>
               </td>
           </tr>
         {% endfor %}
