--- a/core/templates/core/tdb.html
+++ b/core/templates/core/tdb.html
@@ -40,13 +40,13 @@
                     {{ overduetask.tasklistfk }}
                   </td>
                   <td>
-                    <a href="{% url 'task-detail' overduetask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Detail' %}</a>
+                    <a href="{% url 'task-detail' overduetask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-info-circle display-6"></i></a>
                   </td>
                   <td class="d-none d-md-table-cell">
-                    <a href="{% url 'task-update' overduetask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                    <a href="{% url 'task-update' overduetask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-pencil display-6"></i></a>
                   </td>
                   <td class="d-none d-md-table-cell">
-                    <a href="{% url 'task-delete' overduetask.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                    <a href="{% url 'task-delete' overduetask.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" ><i class="bi bi-trash3 display-6"></i></a>
                   </td>
               </tr>
                 {% endfor %}
@@ -96,13 +96,13 @@
                     {{ nexttask.tasklistfk }}
                   </td>
                   <td>
-                    <a href="{% url 'task-detail' nexttask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Detail' %}</a>
+                    <a href="{% url 'task-detail' nexttask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-info-circle display-6"></i></a>
                   </td>
                   <td class="d-none d-md-table-cell">
-                    <a href="{% url 'task-update' nexttask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                      <a href="{% url 'task-update' nexttask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-pencil display-6"></i></a>
                   </td>
                   <td class="d-none d-md-table-cell">
-                    <a href="{% url 'task-delete' nexttask.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                      <a href="{% url 'task-delete' nexttask.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" ><i class="bi bi-trash3 display-6"></i></a>
                   </td>
               </tr>
                 {% endfor %}
@@ -130,18 +130,24 @@
           <div class="row">
             <div class="col">
               <p>{% trans 'Species:' %} <i>{{ tree.speciesfk}} </i><br>
-              {% trans 'Description:' %} <i>{{ tree.description }} </i><br>
-              <small>{% trans 'Planting date:' %} <i>{{ tree.bdate }}</i></small><br>
-              <small>{% trans 'Acquisition date:' %} <i>{{ tree.adate }}</i></small><br>
+              {% if tree.description %}
+                {% trans 'Description:' %} <i>{{ tree.description }} </i><br>
+              {% endif %}
+              {% if tree.bdate %}
+                <small>{% trans 'Planting date:' %} <i>{{ tree.bdate }}</i></small><br>
+              {% endif %}
+              {% if tree.adate %}
+                <small>{% trans 'Acquisition date:' %} <i>{{ tree.adate }}</i></small><br>
+              {% endif %}
               <small>{% trans 'Origin:' %} <i>{{ tree.originfk }}</i></small>
               {% if tree.url %}
                 <br><a href="{{ tree.url }}" target="_blank" rel="noopener noreferrer">{{ tree.url }}</a>
               {% endif %}
               </p>
-              <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button" >{% trans 'Detail' %}</a>
-              <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button" >{% trans 'Edit' %}</a>
-              <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm mb-2" role="button" >{% trans 'Delete' %}</a>
-              <a href="{% url 'instant-task' tree.id %}" class="btn btn-outline-success btn-sm mb-2" role="button" >&#9201;</a>
+              <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button" ><i class="bi bi-info-circle display-6"></i></a>
+                <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button" ><i class="bi bi-pencil display-6"></i></a>
+                <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm mb-2" role="button" ><i class="bi bi-trash3 display-6"></i></a>
+              <a href="{% url 'instant-task' tree.id %}" class="btn btn-outline-success btn-sm mb-2" role="button" ><i class="bi bi-hourglass-split display-6"></i></a>
             </div>
             <div class="col">
               <img src="{{ tree.treePic.url }}" class="autoresizeimg" alt="Tree Picture">
@@ -168,26 +174,26 @@
                     {{ task.real_date }}
                   </td>
                   <td>
-                    <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Detail' %}</a>
+                    <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-info-circle display-6"></i></a>
                   </td>
                   <td class="d-none d-md-table-cell">
-                    <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                    <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" ><i class="bi bi-pencil display-6"></i></a>
                   </td>
                   <td class="d-none d-md-table-cell">
-                    <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                    <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" ><i class="bi bi-trash3 display-6"></i></a>
                   </td>
                 {% endif %}
             </tr>
               {% endfor %}
             </tbody>
           </table>
-          <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add task' %}</a>
+          <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" ><i class="bi bi-plus-circle display-6"></i> <i class="bi bi-scissors display-6"></i></a>
 
         </div>
       </div>
     </div>
     {% endfor %}
-    <a href="{% url 'tree-create' %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add a tree' %}</a>
+    <a href="{% url 'tree-create' %}" class="btn btn-outline-success btn-sm mt-1" role="button" ><i class="bi bi-plus-circle display-6"></i> <i class="bi bi-tree display-6"></i></a>
   </div>
 </div>
 {% endblock content%}
