--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -106,9 +106,9 @@
                 {{ pc_form.expert|as_crispy_field }}
             </div>
             <div class="form-row">
-                <button class="btn btn-outline-success mt-2" type="submit">{% trans 'OK' %}</button>
-                <a href="{% url 'core-tdb' %}" class="btn btn-outline-info mt-2" type="cancel">{% trans 'Cancel' %}</a>
-                <a href="{% url 'user-delete' user.id %}" class="btn btn-outline-danger mt-2" type="Delete">{% trans 'Delete user' %}</a>
+                <button class="btn btn-outline-success btn-sm" type="submit"><i class="bi bi-check display-6"></i></button>
+                <button class="btn btn-outline-info btn-sm" onclick="history.back()"><i class="bi bi-x display-6"></i></button>
+                <a href="{% url 'user-delete' user.id %}" class="btn btn-outline-danger btn-sm" type="Delete"><i class="bi bi-trash3  display-6"></i></a>
             </div>
          </fieldset>
         </form>
