tasks.html back button

--- a/core/templates/core/tasks.html
+++ b/core/templates/core/tasks.html
@@ -61,5 +61,6 @@
     {% else %}
     <i>{% trans 'No task to display' %}</i>
     {% endif %}
+<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
 </div>
 {% endblock content%}
