tasks.html back button bug-fix when no task to display

--- a/core/templates/core/tasks.html
+++ b/core/templates/core/tasks.html
@@ -59,7 +59,7 @@
           </tbody>
         </table>
     {% else %}
-    <i>{% trans 'No task to display' %}</i>
+    <i>{% trans 'No task to display' %}</i><br>
     {% endif %}
 <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
 </div>
