--- a/core/templates/core/base-calendar.html
+++ b/core/templates/core/base-calendar.html
@@ -84,10 +84,10 @@
 </head>
 <body>
 <div class="container-fluid noir no-pad-no-marg">
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary noir no-pad-no-marg">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary noir no-pad-no-marg">
   <div class="container-fluid noir no-pad-no-marg">
     <a class="navbar-brand" href="/">
-      <img src="{% static 'img/kawaiitree.jpg' %}"></a>
+        <img src="{% static 'manifest/icon/apple-icon-60x60.png' %}" class="rounded-circle profil-pic navbar-brand"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
