bug fix task form cancel button

--- a/core/templates/core/task_form.html
+++ b/core/templates/core/task_form.html
@@ -45,7 +45,7 @@
     </fieldset>
     <div class="form-group">
         <button class="btn btn-outline-success btn-sm" type="submit"><i class="bi bi-check display-6"></i></button>
-        <button class="btn btn-outline-info btn-sm" onclick="history.back()"><i class="bi bi-x display-6"></i></button>
+        <button class="btn btn-outline-info btn-sm" type="reset" onclick="history.back()"><i class="bi bi-x display-6"></i></button>
     </div>
   </form>
 </div>
