--- a/start/templates/start/base.html
+++ b/start/templates/start/base.html
@@ -76,7 +76,7 @@
 
 
 </head>
-<body>
+<body style="padding-top: 0">
 
 <div class="container-fluid noir no-padl">
   <div class="row row-cols-auto">
